--- a/styles.css
+++ b/styles.css
@@ -43,7 +43,7 @@ a{
 #sec1 div{
     max-width: 50%;
     margin: 0px;
-    padding: 0px;
+    padding-bottom: 0px;
     flex-grow: 1;
 }
 #sec1 div h1{
@@ -51,7 +51,7 @@ a{
     color: #f9faf8;
     font-size: 48px;
     margin: 0px;
-    padding: 0px;
+    padding-bottom: 8px;
 }
 .right-sec{
     background-color: #566477;
@@ -70,6 +70,7 @@ button{
     border-radius: 10px;
     padding: 1% 5%;
     font-size: 18px;
+    margin-top: 8px;
 
 }
 button:hover{
