--- a/styles.css
+++ b/styles.css
@@ -28,7 +28,7 @@ p{
 ul{
     display: flex;
     justify-content: space-between;
-    gap: 20px;
+    gap: 10px;
     list-style-type: none;
 }
 a{
@@ -76,4 +76,34 @@ button{
 button:hover{
     background-color: white;
     color: #3882f6;
+}
+#sec2,#sec3{
+    text-align: center;
+    padding: 2% 20%;
+    padding-bottom: 5%;
+}
+.box{
+    box-sizing:content-box;
+    /* border: 5px; */;
+    max-width: 15%;
+    /* min-height; */
+    padding: 25%;
+    /* border-color: #3882f6; */
+    border-radius: 10px;
+    margin: auto;
+    border: 2px solid blue ;
+}
+.box-container p{
+    max-width: 80%;
+    padding-top: 2%;
+    padding-bottom: 2%;
+    margin: auto;
+    color: #1f2937;
+    font-weight: lighter;
+    font-size: small;
+}
+#boxes{
+    justify-content: center;
+    padding: 0px;   
+    padding-top: 2%;
 }
