--- a/styles.css
+++ b/styles.css
@@ -102,8 +102,26 @@ button:hover{
     font-weight: lighter;
     font-size: small;
 }
+h2{
+    font-size: 36px;
+    font-weight: bolder;
+    color: #1f2937;
+}
 #boxes{
     justify-content: center;
     padding: 0px;   
     padding-top: 2%;
+}
+#sec3{
+    background-color: #e5e7eb;
+    color: #1f2937;
+    font-size: 24px;
+    text-align: start;
+    font-weight: lighter;
+    padding-top: 6%;
+    padding-bottom: 6%;
+}
+.author{
+    text-align: end;
+    font-weight: lighter;
 }
