--- a/styles.css
+++ b/styles.css
@@ -135,3 +135,26 @@ h2{
     font-size: small;
 
 }
+#sec4{
+    margin-top: 3%;
+    margin-bottom: 3%;
+    background-color: #3882f6;
+    padding-top: 3%;
+    padding-bottom: 3%;
+    max-width: 80%;
+    padding-right: 0px;
+    padding-left: 0px;
+    align-self: center;
+    min-width: 80%;
+    display: flex;
+    justify-content: space-around;
+    border-radius: 20px;
+    color: white;
+    font-weight: lighter;
+}
+#sec4 button{
+    border-color: white;
+}
+h3{
+    margin-bottom: 2px;
+}
